<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sancho</groupId>
    <artifactId>sancho</artifactId>
    <!-- 0.9.4-60: the 0.9.4-59 sources recovered by decompiling the last published
         binary, ported to modern SWT/JFace and JDK 17+, plus bug fixes. See
         CHANGELOG.md. -59 already used Tree (not the deprecated TableTree), but it
         injects a few classes into org.eclipse.jface.viewers, so JFace is consumed
         unsigned from local-repo. -->
    <version>0.9.4-69</version>
    <packaging>jar</packaging>

    <name>Sancho</name>
    <description>Java/SWT GUI for the MLDonkey P2P client (modernized 0.9.4 build)</description>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <!-- Vineflower emits UTF-8 (e.g. the SWT.MOZILLA style shows up as the
             char literal '耀'). -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <swt.version>3.124.0</swt.version>
        <!-- Default SWT fragment; the profiles below override it per OS/arch.
             Override manually with -Dswt.artifactId=org.eclipse.swt.<ws>.<os>.<arch>. -->
        <swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
    </properties>

    <!-- -59 injects its own classes into org.eclipse.jface.viewers
         (ICustomViewer, CustomTableViewer, CustomTreeViewer), so JFace must be
         unsigned (the JVM refuses to load them into the signed package). SWT is
         NOT injected into, so the stock signed SWT fragment is used per platform.
         tools/unsign-libs.ps1 regenerates local-repo/. -->
    <repositories>
        <repository>
            <id>sancho-local</id>
            <url>file://${project.basedir}/local-repo</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

    <dependencies>
        <!-- Stock (signed) SWT fragment for the target platform; artifactId is set
             by the OS/arch profiles below. -->
        <dependency>
            <groupId>org.eclipse.platform</groupId>
            <artifactId>${swt.artifactId}</artifactId>
            <version>${swt.version}</version>
        </dependency>

        <!-- Platform-independent unsigned JFace (from local-repo). -->
        <dependency>
            <groupId>org.sancho.thirdparty</groupId>
            <artifactId>org.eclipse.jface</artifactId>
            <version>3.31.0-unsigned</version>
        </dependency>

        <!-- IRC support (sancho.view.irc.*) — new in -59. -->
        <dependency>
            <groupId>pircbot</groupId>
            <artifactId>pircbot</artifactId>
            <version>1.5.0</version>
        </dependency>

        <dependency>
            <groupId>net.sf.trove4j</groupId>
            <artifactId>trove4j</artifactId>
            <version>2.1.0</version>
        </dependency>

        <!-- Maintained drop-in fork of the abandoned com.jcraft:jsch:0.1.55 (same
             com.jcraft.jsch package), with security fixes and modern algorithms. -->
        <dependency>
            <groupId>com.github.mwiede</groupId>
            <artifactId>jsch</artifactId>
            <version>0.2.23</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>sancho-src/src</sourceDirectory>
        <resources>
            <resource>
                <directory>sancho-src/src</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <!-- filtered separately below so ${...} elsewhere is untouched -->
                    <exclude>**/version.properties</exclude>
                </excludes>
            </resource>
            <!-- Only version.properties is filtered, so its ${project.version} is
                 substituted at build time and VersionInfo shows the real build. -->
            <resource>
                <directory>sancho-src/src</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/version.properties</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <failOnWarning>false</failOnWarning>
                    <compilerArgs>
                        <arg>-nowarn</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>sancho.core.Sancho</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <mainClass>sancho.core.Sancho</mainClass>
                </configuration>
            </plugin>

            <!-- Self-contained runnable jar: target/sancho-<version>-all.jar bundles
                 every dependency (incl. the active-platform SWT), so it runs with just
                 a JRE: `java -jar sancho-<version>-all.jar`. It is therefore
                 platform-specific (one SWT fragment). Jar signatures and duplicate
                 module-info are stripped so the shaded SWT/JFace load cleanly. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>all</shadedClassifierName>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/ECLIPSE_.*</exclude>
                                        <exclude>module-info.class</exclude>
                                        <!-- Each input jar has its own MANIFEST.MF; the
                                             ManifestResourceTransformer below writes a fresh
                                             one (with Main-Class), so drop the inputs. -->
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <!-- Eclipse/OSGi build metadata that several SWT/JFace
                                             jars each ship (causes shade "overlapping resource"
                                             warnings); not needed for our plain non-OSGi launch. -->
                                        <exclude>.options</exclude>
                                        <exclude>.api_description</exclude>
                                        <exclude>about.html</exclude>
                                        <exclude>about_files/**</exclude>
                                        <exclude>plugin.properties</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>sancho.core.Sancho</Main-Class>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Auto-select the SWT fragment for the building machine's OS/arch. Each
         profile only overrides swt.artifactId; everything else is shared. -->
    <profiles>
        <profile>
            <id>swt-windows</id>
            <activation><os><family>windows</family></os></activation>
            <properties>
                <swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
            </properties>
        </profile>
        <profile>
            <id>swt-linux-x86_64</id>
            <activation><os><name>Linux</name><arch>amd64</arch></os></activation>
            <properties>
                <swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
            </properties>
        </profile>
        <profile>
            <id>swt-linux-aarch64</id>
            <activation><os><name>Linux</name><arch>aarch64</arch></os></activation>
            <properties>
                <swt.artifactId>org.eclipse.swt.gtk.linux.aarch64</swt.artifactId>
            </properties>
        </profile>
        <profile>
            <id>swt-mac-x86_64</id>
            <activation><os><family>mac</family><arch>x86_64</arch></os></activation>
            <properties>
                <swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
            </properties>
        </profile>
        <profile>
            <id>swt-mac-aarch64</id>
            <activation><os><family>mac</family><arch>aarch64</arch></os></activation>
            <properties>
                <swt.artifactId>org.eclipse.swt.cocoa.macosx.aarch64</swt.artifactId>
            </properties>
        </profile>
    </profiles>
</project>
